@@ -10,7 +10,7 @@
 #	
 #
 
-warn "Warning: parsearg is deprecated after Ruby 1.8.1; use optparse instead"
+warn "Warning:#{caller[0].sub(/:in `.*'\z/, '')}: parsearg is deprecated after Ruby 1.8.1; use optparse instead"
 
 $RCS_ID=%q$Header$
 
